--- a/packages/authentication-widget/package.json
+++ b/packages/authentication-widget/package.json
@@ -8,25 +8,33 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
+		"cross-env": "^7.0.3",
 		"formik": "^2.2.9",
 		"graphql": "^15.5.3",
 		"graphql-request": "^3.5.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-scripts": "4.0.3",
-		"typescript": "^4.1.2",
+		"rimraf": "^3.0.2",
 		"web-vitals": "^1.0.1",
 		"yup": "^0.32.9"
+	},
+	"devDependencies": {
+		"@open-wc/building-rollup": "^1.10.0",
+		"@types/jest": "^26.0.15",
+		"@types/node": "^12.0.0",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"deepmerge": "^4.2.2",
+		"react-scripts": "4.0.3",
+		"rollup": "^2.56.3",
+		"typescript": "^4.1.2"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"build:rollup": "cross-env rimraf ./src/library/dist && tsc -p tsconfig-library.json"
 	},
 	"eslintConfig": {
 		"extends": [
