--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -10,18 +10,23 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
+        "@thelasthurrah/binary-stash-authentication": "^0.0.2",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "formik": "^2.2.9",
         "graphql": "^15.5.3",
+        "moment": "^2.29.1",
+        "ramda": "^0.27.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-moment": "^1.1.1",
         "react-scripts": "4.0.3",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
+        "slate": "^0.66.1",
+        "slate-react": "^0.66.1",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
         "yup": "^0.32.9"
@@ -58,6 +63,7 @@
         "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.4",
         "@graphql-codegen/typescript-operations": "2.1.4",
         "@graphql-codegen/typescript-react-apollo": "3.1.4",
+        "@types/ramda": "^0.27.44",
         "@types/yup": "^0.29.13"
     },
     "workspaces": {
