--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -10,12 +10,13 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
-        "@thelasthurrah/binary-stash-authentication": "^0.0.2",
+        "@thelasthurrah/binary-stash-authentication": "^0.0.5",
         "@types/jest": "^26.0.15",
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "formik": "^2.2.9",
+        "glob": "^7.1.7",
         "graphql": "^15.5.3",
         "moment": "^2.29.1",
         "ramda": "^0.27.1",
