--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -18,6 +18,7 @@
         "formik": "^2.2.9",
         "glob": "^7.1.7",
         "graphql": "^15.5.3",
+        "lodash": "^4.17.21",
         "moment": "^2.29.1",
         "ramda": "^0.27.1",
         "react": "^17.0.2",
