--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -4,9 +4,13 @@
     "private": true,
     "dependencies": {
         "@apollo/client": "^3.4.12",
+        "@emotion/react": "^11.4.1",
+        "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^4.12.3",
-        "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "^4.0.0-alpha.60",
+        "@mui/icons-material": "^5.0.1",
+        "@mui/material": "^5.0.1",
+        "@mui/styled-engine-sc": "^5.0.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
@@ -29,6 +33,7 @@
         "semantic-ui-react": "^2.0.3",
         "slate": "^0.66.1",
         "slate-react": "^0.66.1",
+        "styled-components": "^5.3.1",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1",
         "yup": "^0.32.9"
