--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -3,26 +3,26 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@apollo/client": "^3.4.12",
+        "@apollo/client": "^3.4.15",
+        "@emotion/css": "^11.1.3",
         "@emotion/react": "^11.4.1",
         "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/lab": "^4.0.0-alpha.60",
         "@mui/icons-material": "^5.0.1",
-        "@mui/material": "^5.0.1",
+        "@mui/material": "^5.0.2",
         "@mui/styled-engine-sc": "^5.0.0",
         "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
+        "@testing-library/react": "^12.1.1",
+        "@testing-library/user-event": "^13.2.1",
         "@thelasthurrah/binary-stash-authentication": "^0.0.5",
-        "@types/jest": "^26.0.15",
-        "@types/node": "^12.0.0",
-        "@types/react": "^17.0.0",
-        "@types/react-dom": "^17.0.0",
+        "emotion": "^11.0.0",
+        "escape-html": "^1.0.3",
         "formik": "^2.2.9",
         "glob": "^7.1.7",
         "graphql": "^15.5.3",
-        "lodash": "^4.17.21",
+        "immutable": "^4.0.0-rc.15",
+        "is-hotkey": "^0.2.0",
         "moment": "^2.29.1",
         "ramda": "^0.27.1",
         "react": "^17.0.2",
@@ -31,11 +31,13 @@
         "react-scripts": "4.0.3",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
-        "slate": "^0.66.1",
-        "slate-react": "^0.66.1",
+        "slate": "^0.66.5",
+        "slate-history": "^0.66.0",
+        "slate-plain-serializer": "^0.7.13",
+        "slate-react": "^0.66.4",
         "styled-components": "^5.3.1",
         "typescript": "^4.1.2",
-        "web-vitals": "^1.0.1",
+        "web-vitals": "^2.1.0",
         "yup": "^0.32.9"
     },
     "scripts": {
@@ -68,9 +70,16 @@
         "@graphql-codegen/introspection": "2.1.0",
         "@graphql-codegen/typescript": "2.2.2",
         "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.4",
-        "@graphql-codegen/typescript-operations": "2.1.4",
+        "@graphql-codegen/typescript-operations": "2.1.5",
         "@graphql-codegen/typescript-react-apollo": "3.1.4",
-        "@types/ramda": "^0.27.44",
+        "@types/escape-html": "^1.0.1",
+        "@types/jest": "^27.0.2",
+        "@types/node": "^16.10.2",
+        "@types/ramda": "^0.27.45",
+        "@types/react": "^17.0.26",
+        "@types/react-dom": "^17.0.0",
+        "@types/slate": "^0.47.9",
+        "@types/slate-react": "^0.50.1",
         "@types/yup": "^0.29.13"
     },
     "workspaces": {
