--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -33,6 +33,7 @@
         "semantic-ui-react": "^2.0.3",
         "slate": "^0.66.5",
         "slate-history": "^0.66.0",
+        "slate-html-serializer": "^0.8.13",
         "slate-plain-serializer": "^0.7.13",
         "slate-react": "^0.66.4",
         "styled-components": "^5.3.1",
@@ -79,6 +80,7 @@
         "@types/react": "^17.0.26",
         "@types/react-dom": "^17.0.0",
         "@types/slate": "^0.47.9",
+        "@types/slate-html-serializer": "^0.6.5",
         "@types/slate-react": "^0.50.1",
         "@types/yup": "^0.29.13"
     },
