--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -29,7 +29,6 @@
         "semantic-ui-react": "^2.0.3",
         "slate": "^0.66.5",
         "slate-history": "^0.66.0",
-        "slate-plain-serializer": "^0.7.13",
         "slate-react": "^0.66.4",
         "styled-components": "^5.3.1",
         "web-vitals": "^2.1.0",
@@ -61,7 +60,6 @@
         ]
     },
     "devDependencies": {
-        "typescript": "^4.1.2",
         "@graphql-codegen/cli": "2.2.0",
         "@graphql-codegen/introspection": "2.1.0",
         "@graphql-codegen/typescript": "2.2.2",
@@ -80,7 +78,8 @@
         "@types/slate": "^0.47.9",
         "@types/slate-html-serializer": "^0.6.5",
         "@types/slate-react": "^0.50.1",
-        "@types/yup": "^0.29.13"
+        "@types/yup": "^0.29.13",
+        "typescript": "^4.1.2"
     },
     "workspaces": {
         "nohoist": [
