--- a/packages/authentication-widget/package.json
+++ b/packages/authentication-widget/package.json
@@ -3,38 +3,44 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@material-ui/core": "^4.12.3",
-		"@material-ui/lab": "^4.0.0-alpha.60",
+		"@apollo/client": "^3.4.16",
+		"@graphql-codegen/cli": "^2.2.1",
+		"@mui/material": "^5.0.4",
 		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^12.1.1",
-		"@testing-library/user-event": "^13.2.1",
+		"@testing-library/react": "^12.1.2",
+		"@testing-library/user-event": "^13.5.0",
 		"cross-env": "^7.0.3",
 		"formik": "^2.2.9",
-		"graphql": "^15.5.3",
-		"graphql-request": "^3.5.0",
+		"graphql": "^15.6.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"rimraf": "^3.0.2",
-		"web-vitals": "^2.1.0",
-		"yup": "^0.32.9"
+		"web-vitals": "^2.1.2",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "2.2.1",
+		"@graphql-codegen/introspection": "2.1.0",
+		"@graphql-codegen/typescript": "2.2.4",
+		"@graphql-codegen/typescript-operations": "^2.1.8",
+		"@graphql-codegen/typescript-react-apollo": "3.1.6",
 		"@open-wc/building-rollup": "^1.10.0",
 		"@types/jest": "^27.0.2",
-		"@types/node": "^16.10.2",
-		"@types/react": "^17.0.26",
-		"@types/react-dom": "^17.0.0",
+		"@types/node": "^16.11.4",
+		"@types/react": "^17.0.31",
+		"@types/react-dom": "^17.0.10",
 		"deepmerge": "^4.2.2",
 		"react-scripts": "4.0.3",
 		"rollup": "^2.56.3",
-		"typescript": "^4.1.2"
+		"typescript": "^4.4.4"
 	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"build:rollup": "cross-env rimraf ./src/library/dist && tsc -p tsconfig-library.json"
+		"build:rollup": "cross-env rimraf ./src/library/dist && tsc -p tsconfig-library.json",
+		"graphql-codegen": "graphql-codegen --config codegen.yml"
 	},
 	"eslintConfig": {
 		"extends": [
