--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -3,21 +3,24 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@apollo/client": "^3.4.15",
-        "@emotion/css": "^11.1.3",
-        "@emotion/react": "^11.4.1",
+        "@apollo/client": "^3.4.16",
+        "@emotion/css": "^11.5.0",
+        "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
+        "@grpc/grpc-js": "^1.4.1",
+        "@grpc/proto-loader": "^0.6.6",
         "@material-ui/core": "^4.12.3",
         "@material-ui/lab": "^4.0.0-alpha.60",
-        "@mui/icons-material": "^5.0.1",
-        "@mui/material": "^5.0.2",
-        "@mui/styled-engine-sc": "^5.0.0",
-        "@thelasthurrah/binary-stash-authentication": "^0.0.5",
+        "@mui/icons-material": "^5.0.4",
+        "@mui/material": "^5.0.4",
+        "@mui/styled-engine-sc": "^5.0.3",
+        "@nestjs/microservices": "^8.1.1",
+        "@thelasthurrah/binary-stash-authentication": "^0.0.8",
         "emotion": "^11.0.0",
         "escape-html": "^1.0.3",
         "formik": "^2.2.9",
-        "graphql": "^15.5.3",
-        "immutable": "^4.0.0-rc.15",
+        "graphql": "^15.6.1",
+        "immutable": "^4.0.0",
         "is-hotkey": "^0.2.0",
         "moment": "^2.29.1",
         "ramda": "^0.27.1",
@@ -30,9 +33,10 @@
         "slate": "^0.66.5",
         "slate-history": "^0.66.0",
         "slate-react": "^0.66.4",
-        "styled-components": "^5.3.1",
-        "web-vitals": "^2.1.0",
-        "yup": "^0.32.9"
+        "styled-components": "^5.3.3",
+        "subscriptions-transport-ws": "^0.9.19",
+        "web-vitals": "^2.1.2",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -60,26 +64,26 @@
         ]
     },
     "devDependencies": {
-        "@graphql-codegen/cli": "2.2.0",
+        "@graphql-codegen/cli": "2.2.1",
         "@graphql-codegen/introspection": "2.1.0",
-        "@graphql-codegen/typescript": "2.2.2",
-        "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.4",
-        "@graphql-codegen/typescript-operations": "2.1.5",
-        "@graphql-codegen/typescript-react-apollo": "3.1.4",
+        "@graphql-codegen/typescript": "2.2.4",
+        "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.6",
+        "@graphql-codegen/typescript-operations": "2.1.8",
+        "@graphql-codegen/typescript-react-apollo": "3.1.6",
         "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^12.1.1",
-        "@testing-library/user-event": "^13.2.1",
+        "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^13.5.0",
         "@types/escape-html": "^1.0.1",
         "@types/jest": "^27.0.2",
-        "@types/node": "^16.10.2",
+        "@types/node": "^16.11.4",
         "@types/ramda": "^0.27.45",
-        "@types/react": "^17.0.26",
-        "@types/react-dom": "^17.0.0",
+        "@types/react": "^17.0.31",
+        "@types/react-dom": "^17.0.10",
         "@types/slate": "^0.47.9",
         "@types/slate-html-serializer": "^0.6.5",
         "@types/slate-react": "^0.50.1",
         "@types/yup": "^0.29.13",
-        "typescript": "^4.1.2"
+        "typescript": "^4.4.4"
     },
     "workspaces": {
         "nohoist": [
