--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -7,16 +7,15 @@
         "@emotion/css": "^11.5.0",
         "@emotion/react": "^11.5.0",
         "@emotion/styled": "^11.3.0",
-        "@grpc/grpc-js": "^1.4.1",
         "@grpc/proto-loader": "^0.6.6",
-        "@mui/icons-material": "^5.0.4",
-        "@mui/material": "^5.0.4",
+        "@mui/icons-material": "^5.0.5",
+        "@mui/material": "^5.0.5",
         "@mui/styled-engine-sc": "^5.0.3",
         "@thelasthurrah/binary-stash-authentication": "^0.0.9",
         "emotion": "^11.0.0",
         "escape-html": "^1.0.3",
         "formik": "^2.2.9",
-        "graphql": "^15.6.1",
+        "graphql": "^15.7.0",
         "immutable": "^4.0.0",
         "is-hotkey": "^0.2.0",
         "moment": "^2.29.1",
@@ -29,7 +28,7 @@
         "semantic-ui-react": "^2.0.3",
         "slate": "^0.66.5",
         "slate-history": "^0.66.0",
-        "slate-react": "^0.66.4",
+        "slate-react": "^0.68.1",
         "styled-components": "^5.3.3",
         "subscriptions-transport-ws": "^0.9.19",
         "web-vitals": "^2.1.2",
@@ -67,19 +66,22 @@
         "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.6",
         "@graphql-codegen/typescript-operations": "2.1.8",
         "@graphql-codegen/typescript-react-apollo": "3.1.6",
+        "@parcel/packager-ts": "^2.0.0",
+        "@parcel/transformer-typescript-types": "^2.0.0",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/escape-html": "^1.0.1",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.11.6",
-        "@types/ramda": "^0.27.45",
+        "@types/ramda": "^0.27.46",
         "@types/react": "^17.0.33",
         "@types/react-dom": "^17.0.10",
         "@types/slate": "^0.47.9",
         "@types/slate-html-serializer": "^0.6.5",
         "@types/slate-react": "^0.50.1",
         "@types/yup": "^0.29.13",
+        "parcel": "^2.0.0",
         "typescript": "^4.4.4"
     },
     "workspaces": {
