--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -12,6 +12,7 @@
         "@mui/material": "^5.0.5",
         "@mui/styled-engine-sc": "^5.0.3",
         "@thelasthurrah/binary-stash-authentication": "^0.0.9",
+        "cross-env": "^7.0.3",
         "emotion": "^11.0.0",
         "escape-html": "^1.0.3",
         "formik": "^2.2.9",
