--- a/packages/authentication-widget/package.json
+++ b/packages/authentication-widget/package.json
@@ -4,14 +4,13 @@
 	"private": true,
 	"dependencies": {
 		"@apollo/client": "^3.4.16",
-		"@graphql-codegen/cli": "^2.2.1",
 		"@mui/material": "^5.0.4",
-		"@testing-library/jest-dom": "^5.11.4",
+		"@testing-library/jest-dom": "^5.15.0",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
 		"cross-env": "^7.0.3",
 		"formik": "^2.2.9",
-		"graphql": "^15.6.1",
+		"graphql": "^16.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"rimraf": "^3.0.2",
@@ -19,22 +18,22 @@
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
-		"@graphql-codegen/cli": "2.2.1",
+		"@graphql-codegen/cli": "2.2.2",
 		"@graphql-codegen/introspection": "2.1.0",
-		"@graphql-codegen/typescript": "2.2.4",
-		"@graphql-codegen/typescript-operations": "^2.1.8",
-		"@graphql-codegen/typescript-react-apollo": "3.1.6",
-		"@open-wc/building-rollup": "^1.10.0",
+		"@graphql-codegen/typescript": "2.3.0",
+		"@graphql-codegen/typescript-operations": "^2.2.0",
+		"@graphql-codegen/typescript-react-apollo": "3.2.0",
+		"@open-wc/building-rollup": "^2.0.1",
 		"@types/jest": "^27.0.2",
 		"@types/node": "^16.11.4",
-		"@types/react": "^17.0.32",
-		"@types/react-dom": "^17.0.10",
+		"@types/react": "^17.0.34",
+		"@types/react-dom": "^17.0.11",
 		"deepmerge": "^4.2.2",
 		"react-scripts": "4.0.3",
-		"rollup": "^2.58.1",
 		"typescript": "^4.4.4"
 	},
 	"scripts": {
+		"remove:node_modules": "npx rimraf node_modules",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
