--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -11,12 +11,12 @@
         "@mui/icons-material": "^5.0.5",
         "@mui/material": "^5.0.5",
         "@mui/styled-engine-sc": "^5.0.3",
-        "@thelasthurrah/binary-stash-authentication": "^0.0.9",
+        "@thelasthurrah/binary-stash-authentication": "^0.0.11",
         "cross-env": "^7.0.3",
         "emotion": "^11.0.0",
         "escape-html": "^1.0.3",
         "formik": "^2.2.9",
-        "graphql": "^16.0.0",
+        "graphql": "^16.0.1",
         "immutable": "^4.0.0",
         "is-hotkey": "^0.2.0",
         "moment": "^2.29.1",
@@ -25,17 +25,19 @@
         "react-dom": "^17.0.2",
         "react-moment": "^1.1.1",
         "react-scripts": "4.0.3",
+        "rimraf": "^3.0.2",
         "semantic-ui-css": "^2.4.1",
         "semantic-ui-react": "^2.0.3",
         "slate": "^0.66.5",
         "slate-history": "^0.66.0",
         "slate-react": "^0.69.0",
         "styled-components": "^5.3.3",
-        "subscriptions-transport-ws": "^0.9.19",
+        "subscriptions-transport-ws": "^0.11.0",
         "web-vitals": "^2.1.2",
         "yup": "^0.32.11"
     },
     "scripts": {
+        "remove:node_modules": "npx rimraf node_modules",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -69,15 +71,15 @@
         "@graphql-codegen/typescript-react-apollo": "3.2.0",
         "@parcel/packager-ts": "^2.0.0",
         "@parcel/transformer-typescript-types": "^2.0.0",
-        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/jest-dom": "^5.15.0",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
         "@types/escape-html": "^1.0.1",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.11.6",
         "@types/ramda": "^0.27.46",
-        "@types/react": "^17.0.33",
-        "@types/react-dom": "^17.0.10",
+        "@types/react": "^17.0.34",
+        "@types/react-dom": "^17.0.11",
         "@types/slate": "^0.47.9",
         "@types/slate-html-serializer": "^0.6.5",
         "@types/slate-react": "^0.50.1",
