--- a/packages/comment-widget/package.json
+++ b/packages/comment-widget/package.json
@@ -11,6 +11,7 @@
         "@mui/icons-material": "^5.0.5",
         "@mui/material": "^5.0.5",
         "@mui/styled-engine-sc": "^5.0.3",
+        "@mui/styles": "^5.0.2",
         "@thelasthurrah/binary-stash-authentication": "^0.0.11",
         "cross-env": "^7.0.3",
         "emotion": "^11.0.0",
@@ -65,10 +66,10 @@
     "devDependencies": {
         "@graphql-codegen/cli": "2.2.2",
         "@graphql-codegen/introspection": "2.1.0",
-        "@graphql-codegen/typescript": "2.3.0",
+        "@graphql-codegen/typescript": "2.3.1",
         "@graphql-codegen/typescript-apollo-client-helpers": "^2.1.7",
         "@graphql-codegen/typescript-operations": "2.2.0",
-        "@graphql-codegen/typescript-react-apollo": "3.2.0",
+        "@graphql-codegen/typescript-react-apollo": "3.2.1",
         "@parcel/packager-ts": "^2.0.0",
         "@parcel/transformer-typescript-types": "^2.0.0",
         "@testing-library/jest-dom": "^5.15.0",
