--- a/packages/programmable-api-comments/package.json
+++ b/packages/programmable-api-comments/package.json
@@ -19,7 +19,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.1",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/yup": "^0.29.13"
   }
 }
