--- a/packages/last-hurrah-comment-component/package.json
+++ b/packages/last-hurrah-comment-component/package.json
@@ -10,30 +10,30 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@apollo/client": "^3.5.6",
+        "@apollo/client": "^3.5.8",
         "@vue/apollo-composable": "^4.0.0-alpha.16",
-        "core-js": "^3.19.3",
-        "graphql": "^16.1.0",
+        "core-js": "^3.21.0",
+        "graphql": "^16.3.0",
         "graphql-tag": "^2.12.6",
-        "node-sass": "^7.0.0",
-        "vue": "^3.0.0",
+        "node-sass": "^7.0.1",
+        "vue": "^3.2.30",
         "vuex": "^4.0.0-0"
     },
     "devDependencies": {
         "@types/chai": "^4.2.11",
-        "@types/mocha": "^9.0.0",
+        "@types/mocha": "^9.1.0",
         "@vue/cli-plugin-babel": "~4.5.0",
         "@vue/cli-plugin-typescript": "~4.5.0",
         "@vue/cli-plugin-unit-mocha": "~4.5.0",
         "@vue/cli-plugin-vuex": "~4.5.0",
         "@vue/cli-service": "~4.5.0",
-        "@vue/compiler-sfc": "^3.0.0",
-        "@vue/eslint-config-prettier": "^6.0.0",
-        "@vue/eslint-config-typescript": "^9.0.1",
-        "@vue/test-utils": "^2.0.0-0",
-        "chai": "^4.1.2",
+        "@vue/compiler-sfc": "^3.2.30",
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "@vue/eslint-config-typescript": "^10.0.0",
+        "@vue/test-utils": "^2.0.0-rc.17",
+        "chai": "^4.3.6",
         "prettier": "^2.2.1",
         "sass-loader": "^12.4.0",
-        "typescript": "~4.5.3"
+        "typescript": "~4.5.5"
     }
 }
