--- a/packages/last-hurrah-comment-component/package.json
+++ b/packages/last-hurrah-comment-component/package.json
@@ -10,30 +10,30 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@apollo/client": "^3.5.8",
-        "@vue/apollo-composable": "^4.0.0-alpha.16",
-        "core-js": "^3.21.0",
-        "graphql": "^16.3.0",
+        "@apollo/client": "^3.6.5",
+        "@vue/apollo-composable": "^4.0.0-alpha.17",
+        "core-js": "^3.22.7",
+        "graphql": "^16.5.0",
         "graphql-tag": "^2.12.6",
         "node-sass": "^7.0.1",
-        "vue": "^3.2.30",
+        "vue": "^3.2.36",
         "vuex": "^4.0.0-0"
     },
     "devDependencies": {
-        "@types/chai": "^4.2.11",
-        "@types/mocha": "^9.1.0",
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-typescript": "~4.5.0",
-        "@vue/cli-plugin-unit-mocha": "~4.5.0",
-        "@vue/cli-plugin-vuex": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
-        "@vue/compiler-sfc": "^3.2.30",
+        "@types/chai": "^4.3.1",
+        "@types/mocha": "^9.1.1",
+        "@vue/cli-plugin-babel": "~5.0.4",
+        "@vue/cli-plugin-typescript": "~5.0.4",
+        "@vue/cli-plugin-unit-mocha": "~5.0.4",
+        "@vue/cli-plugin-vuex": "~5.0.4",
+        "@vue/cli-service": "~5.0.4",
+        "@vue/compiler-sfc": "^3.2.36",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^10.0.0",
-        "@vue/test-utils": "^2.0.0-rc.17",
+        "@vue/test-utils": "^2.0.0",
         "chai": "^4.3.6",
-        "prettier": "^2.2.1",
-        "sass-loader": "^12.4.0",
-        "typescript": "~4.5.5"
+        "prettier": "^2.6.2",
+        "sass-loader": "^13.0.0",
+        "typescript": "~4.7.2"
     }
 }
